styles/gallery.css
/* --------------- BASICS --------------- */

*, html {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html, body {
    font-family: cursive;
    color: #4F4E4E;
    background-color: rgba(0, 0, 0, 0.3);
}

button {
    cursor: pointer;
    font-family: cursive;
    border: none;
    background-color: transparent;
}

p {
    font-size: 1.5rem;
    line-height: 1.5rem;
}

a {
    text-decoration: none;
    color: black
}

header {
    font-weight: bold;
    display: flex;
    min-height: 50px;
    justify-content: space-between;
    padding-left: 5px;
    padding-right: 50px;
    border-bottom: solid 3px  rgba(0, 0, 0, 0.8);
    background-color: rgba(0, 0, 0, 0.7);
}

header ul {
    display: flex;
    flex-grow: 1;
    justify-content: space-around;
    align-self: center;
}

li {
    list-style-type: none;
    font-weight:bolder;
}

header a {
    font-size: 1.5rem;
    color:  rgb(230, 169, 126);
}

header a:hover {
    color: rgb(243, 100, 4);
}

.wrapper {
    min-height: 100vh;
}

footer {
    margin-top: 2rem;
    border-top: solid 3px  rgba(0, 0, 0, 0.8);
    background-color: rgba(0, 0, 0, 0.7);
    color: rgb(230, 169, 126);
    display: flex;
    justify-content: space-between;
    text-align: center;
}

footer>h3, footer>.logo-img {
    align-self: flex-end;
    margin: 10px;
}

header img, footer img {
    max-width: 150px;
    margin-right: 5rem;
    object-fit: contain;
}

footer img {
    margin-right: 0;
}

footer p {
    margin: 5px 0;
}
footer a{
    width: fit-content;
    margin: 5px auto;
}
a img {
    width: 2rem;
}

/* -------------------------------------- */

/* --------------- ELEMENTS --------------- */

#about {
    margin: 10px 0;
    display: flex;
    flex-direction: column;
}

.container {
    background-color: rgba(80, 135, 199, 0.5);
    max-width: 90vw;
    margin: 2rem auto;
    border-radius: 0.5rem;
}

.gallery {
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, 200px);
    grid-gap: 1.5rem;
    align-self: center;
    justify-self: center;
    padding: 1.5rem;
}

.gallery-item {
    max-width: 200px;
    max-height: 200px;
}

.gallery-img {
    border-radius: 1rem;
    width: 100%;
    height: 100%;
    opacity: 0.7;
}

.gallery-img:hover {
    cursor: pointer;
    opacity: 1;
}

.my-pic {
    border-radius: 50%;
    position: relative;
    margin: 0 auto;
    max-width: 200px;
}

/* ---------------------------------------- */

